--- a/chat-frontend/templates/index.html
+++ b/chat-frontend/templates/index.html
@@ -6,16 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/milligram.css') }}">
   <title>My AI Bot</title>
+  <script type="text/javascript">
+    function enterGame(obj) {
+      var game = obj.innerHTML;
+      document.getElementById('input').value = encodeURI(game);
+    }
+  </script>
 </head>
 <body>
   <h3>My AI Bot</h3>
+  <table>
+    <tr>
+      <td width="50%">
   <form action="/activities" method="GET">
-    <nobr><input type="submit" value="Get games">{% if outputGames %}<label for="outputGames">Output:</label><div>{{ outputGames }}</div></nobr>{% endif %}
+    <nobr>
+      <input type="submit" value="Get games">{% if outputGames %}
+        <label for="outputGames">Output:</label>
+        {% for game in outputGames %}<div><a onclick='javascript:enterGame(this);'>{{game}}</a></div>{% endfor %}
+      </nobr>{% endif %}
   </form>
   <form action="/activities/search" method="POST">
     <label for="input">Input:</label>
     <!-- switching to textarea for wider input -->
-    <textarea placeholder="Insert Your Game" name="input"></textarea>
+    <textarea placeholder="Insert Your Game" name="input" id="input">{{input_prompt}}</textarea>
     <input type="submit" value="Get game prompt">
   </form>
   <form action="/chat" method="POST">
@@ -25,11 +38,13 @@
     {% endif %}
     <input type="submit" value="Submit prompt">
   </form>
+  </td>
+  <td width="50%">
     {% if outputChatGuid %}
     <nobr><label for="outputChatGuid">Chat Guid:</label><div>{{ outputChatGuid }}</div></nobr>
     {% endif %}
     {% if outputChatContent %}
-    <nobr><label for="outputChatContent">Chat Content:</label><div>{{ outputChatContent }}</div></nobr>
+    <label for="outputChatContent">Chat Content:</label><div>{{ outputChatContent }}</div>
     {% endif %}
   <form action="/chat/guid" method="POST">
     <textarea placeholder="Insert Your Game Interaction" name="inputGameInteraction"></textarea>
@@ -39,6 +54,8 @@
     <label for="outputChatInteraction">Chat Interaction:</label>
     <div>{{ outputChatInteraction }}</div>
     {% endif %}
+    </td></tr>
+    </table>
     <p><br /><br /><br /></p>
 </body>
 </html>
